--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "dprk-test",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-rsync": "^0.6.2"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.2.0",
@@ -23,6 +25,7 @@
     "grunt-newer": "~0.5.4",
     "grunt-react": "~0.5.0",
     "grunt-rev": "~0.1.0",
+    "grunt-rsync": "^0.6.2",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
