--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.2.0",
     "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-gh-pages": "^0.10.0",
     "grunt-mocha": "~0.4.0",
