--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-gh-pages": "^0.10.0",
     "grunt-mocha": "~0.4.0",
     "grunt-newer": "~0.5.4",
-    "grunt-react": "~0.5.0",
+    "grunt-react": "^0.12.2",
     "grunt-rev": "~0.1.0",
     "grunt-rsync": "^0.6.2",
     "grunt-svgmin": "~0.2.0",
